@@ -5,6 +5,14 @@ plugins {
     id "de.undercouch.download" version "5.6.0"
 }
 
+//Activate the locked apple API with flag '--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED'
+application {
+    mainClass = 'org.triplea.game.client.HeadedGameRunner'
+    applicationDefaultJvmArgs = [
+            '--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED'
+    ]
+}
+
 archivesBaseName = "$group-$name"
 mainClassName = "org.triplea.game.client.HeadedGameRunner"
 
